@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+4/26/21: Fixes for Python: make sure Python is killed when SerialEM crashes,
+escape backslashes so they are not misinterpreted in Python, add library to
+module package.
+
 4/23/21: Changed Python scripting to run Python excecutable with script to
 solve import problems; this also allows external control from a Python
 script.  Added a command to place an image into a buffer.
